--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4",
     "@cap-js/hana": "^1",
     "@sap/xssec": "^4",
-    "passport": "^0"
+    "passport": "^0",
+    "hdb": "^0.19.0"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.10.0",
